# WhatsQt

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  WhatsQt.pro  WhatsQt.rc  build.bat  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_osx.cpp  mainwindow_osx.mm  resources.qrc
artwork/icon/: icon.icns  icon.sketch  icon2.sketch
cmake/: gitcommitid.cmake  linux.cmake  linux.install.cmake  osx.cmake  osx.install.cmake  windows.cmake  windows.install.cmake
dialog/: AboutDialog.cpp  AboutDialog.h  PreferencesDialog.cpp  PreferencesDialog.ui  aboutdialog.ui
installer/linux/: WhatsQt.desktop.in
installer/osx/: background.sketch  ds_store
js/: bridge.js
net/: cookiejar.cpp  cookiejar.h
notification/: TrayNotificationService.cpp  TrayNotificationService.h  notificationservice.cpp  notificationservice.h  nullnotificationservice.cpp  nullnotificationservice.h
notification/linux/: FreedesktopNotificationService.cpp  FreedesktopNotificationService.h  org.freedesktop.Notifications.xml
notification/osx/: notificationcenterdelegate.h  notificationcenterdelegate.mm  osxnotificationservice.h  osxnotificationservice.mm
travis/: bintray.json.in  compile.sh  install.sh
util/: Constants.cpp  Constants.h  Preferences.cpp  Preferences.h
view/: webpage.cpp  webpage.h  webview.cpp  webview.h
